# libmediactl-v4l2

./: Makefile.am  configure.ac  libmediactl-v4l2.pc.in
