#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([libmediactl-v4l2], [1.0.0], 
	[http://www.renesas.com], [libmediactl-v4l2])
AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_HEADERS([config.h])

# Initialize Automake
AM_INIT_AUTOMAKE([foreign dist-bzip2])

# Initialize libtool
AC_PROG_LIBTOOL

AC_CONFIG_FILES([Makefile libmediactl-v4l2.pc])
AC_OUTPUT
